fixed image width issue on firefox

--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -23,12 +23,13 @@
     justify-content: center;
 
     img {
-        flex: 1;
-        max-width: 100%;
+        max-width: 100%; // Change this line
         border-left: 2px solid black;
         border-right: 2px solid black;
         border-bottom: 2px solid black;
-        max-height: 100vh;
+        max-height: 120vh;
+        object-fit: contain;
+        flex: 1;
     }
 }
 
@@ -52,5 +53,5 @@
     border-bottom: 1px solid black;
     margin: 0px 1px 5px 1px;
     padding: 0px 5px 5px 40px;
-    height: 120vh;
+    min-height: 120vh;
 }
